<resources>
    <string name="app_name">AndroidTest</string>

    <string name="book_details">People Details</string>
    <string name="add_book">Add People</string>

    <string name="hint_judul">Judul Buku</string>
    <string name="hint_penulis">Penulis</string>
    <string name="hint_penerbit">Penerbit</string>
    <string name="hint_email">Email</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>

    <string name="book_id">BOOK_ID</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
</resources>
