<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_light_background"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
>

    <RelativeLayout
            android:padding="@dimen/default_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/default_margin"
                app:srcCompat="@drawable/book"/>

        <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imageViewIcon"
                android:lines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="@string/hint_judul"/>

        <TextView
                android:id="@+id/textViewMet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewName"
                android:layout_toEndOf="@+id/imageViewIcon"
                android:drawableStart="@mipmap/penulis"
                android:gravity="center_vertical"
                android:lines="1"
                tools:text ="@string/hint_penulis"/>
        <Button
                android:id="@+id/buttonPenerbit"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewMet"
                android:layout_toEndOf="@id/imageViewIcon"
                android:drawableStart="@mipmap/penerbit"
                android:gravity="center_vertical"
                android:padding="@dimen/drawable_padding"
                android:lines="1"
                tools:text="@string/hint_penerbit"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>